[gd_scene load_steps=2 format=3 uid="uid://de6mnlp1g4083"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_u0ftf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u0ftf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -50.5
offset_right = 110.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="TestSceneSelect" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Scene"

[node name="HighNoonSelect" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "High Noon"

[node name="OptionsSelect" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Options (Not Implemented)"

[connection signal="pressed" from="VBoxContainer/TestSceneSelect" to="." method="_on_test_scene_select_pressed"]
[connection signal="pressed" from="VBoxContainer/HighNoonSelect" to="." method="_on_high_noon_select_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsSelect" to="." method="_on_options_select_pressed"]
